--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"currentTestResult":null,"workingDirectory":"C:\\Users\\madhusudhan heda\\MissionRnDProjects\\Strings 2"}
+{"gitStatus":"REPO_CREATED","testStatus":1,"submitStatus":0,"currentTestResult":true,"workingDirectory":"C:\\Users\\madhusudhan heda\\MissionRnDProjects\\Strings 2"}
